parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> statement
Rule 2     null -> <empty>
Rule 3     statement -> condicional statement
Rule 4     statement -> loop_while statement
Rule 5     statement -> loop_for statement
Rule 6     statement -> asignacion FINAL statement
Rule 7     statement -> log FINAL statement
Rule 8     statement -> null
Rule 9     condicional -> if_def elseif_def else_def
Rule 10    if_def -> IF PARIZ expression PARDER LLAVIZ statement LLAVDER
Rule 11    elseif_def -> ELSEIF PARIZ expression PARDER LLAVIZ statement LLAVDER elseif_def
Rule 12    elseif_def -> null
Rule 13    else_def -> ELSE LLAVIZ statement LLAVDER
Rule 14    else_def -> null
Rule 15    loop_while -> WHILE PARIZ expression PARDER LLAVIZ statement LLAVDER
Rule 16    loop_while -> DO LLAVIZ statement LLAVDER WHILE PARIZ expression PARDER FINAL
Rule 17    loop_for -> FOR PARIZ declarar-asignar FINAL expression FINAL guardar PARDER LLAVIZ statement LLAVDER
Rule 18    tipo -> INT
Rule 19    tipo -> FLOAT
Rule 20    tipo -> STRING
Rule 21    tipo -> BOOL
Rule 22    log -> LOG expression
Rule 23    asignacion -> declarar
Rule 24    asignacion -> declarar-asignar
Rule 25    asignacion -> guardar
Rule 26    declarar -> tipo VALORID
Rule 27    guardar -> VALORID VALORIGUAL expression
Rule 28    declarar-asignar -> tipo VALORID VALORIGUAL expression
Rule 29    expression -> VALORINT
Rule 30    expression -> VALORFLOAT
Rule 31    expression -> VALORCADENA
Rule 32    expression -> valorbool
Rule 33    expression -> PARIZ expression PARDER
Rule 34    expression -> VALORID
Rule 35    valorbool -> TRUE
Rule 36    valorbool -> FALSE
Rule 37    expression -> VALORRESTA expression
Rule 38    expression -> expression VALORSUMA expression
Rule 39    expression -> expression VALORRESTA expression
Rule 40    expression -> expression VALORMULT expression
Rule 41    expression -> expression VALORDIV expression
Rule 42    expression -> expression VALOREXP expression
Rule 43    expression -> expression VALOREQUIV expression
Rule 44    expression -> expression VALORNOEQUIV expression
Rule 45    expression -> expression VALORMENOR expression
Rule 46    expression -> expression VALORMEOI expression
Rule 47    expression -> expression VALORMAYOR expression
Rule 48    expression -> expression VALORMAOI expression
Rule 49    expression -> expression AND expression
Rule 50    expression -> expression OR expression

Terminals, with rules where they appear

AND                  : 49
BOOL                 : 21
DO                   : 16
ELSE                 : 13
ELSEIF               : 11
FALSE                : 36
FINAL                : 6 7 16 17 17
FLOAT                : 19
FOR                  : 17
IF                   : 10
INT                  : 18
LLAVDER              : 10 11 13 15 16 17
LLAVIZ               : 10 11 13 15 16 17
LOG                  : 22
OR                   : 50
PARDER               : 10 11 15 16 17 33
PARIZ                : 10 11 15 16 17 33
STRING               : 20
TRUE                 : 35
VALORCADENA          : 31
VALORDIV             : 41
VALOREQUIV           : 43
VALOREXP             : 42
VALORFLOAT           : 30
VALORID              : 26 27 28 34
VALORIGUAL           : 27 28
VALORINT             : 29
VALORMAOI            : 48
VALORMAYOR           : 47
VALORMENOR           : 45
VALORMEOI            : 46
VALORMULT            : 40
VALORNOEQUIV         : 44
VALORRESTA           : 37 39
VALORSUMA            : 38
WHILE                : 15 16
error                : 

Nonterminals, with rules where they appear

asignacion           : 6
condicional          : 3
declarar             : 23
declarar-asignar     : 17 24
else_def             : 9
elseif_def           : 9 11
expression           : 10 11 15 16 17 22 27 28 33 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50
guardar              : 17 25
if_def               : 9
inicio               : 0
log                  : 7
loop_for             : 5
loop_while           : 4
null                 : 8 12 14
statement            : 1 3 4 5 6 7 10 11 13 15 16 17
tipo                 : 26 28
valorbool            : 32

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . statement
    (3) statement -> . condicional statement
    (4) statement -> . loop_while statement
    (5) statement -> . loop_for statement
    (6) statement -> . asignacion FINAL statement
    (7) statement -> . log FINAL statement
    (8) statement -> . null
    (9) condicional -> . if_def elseif_def else_def
    (15) loop_while -> . WHILE PARIZ expression PARDER LLAVIZ statement LLAVDER
    (16) loop_while -> . DO LLAVIZ statement LLAVDER WHILE PARIZ expression PARDER FINAL
    (17) loop_for -> . FOR PARIZ declarar-asignar FINAL expression FINAL guardar PARDER LLAVIZ statement LLAVDER
    (23) asignacion -> . declarar
    (24) asignacion -> . declarar-asignar
    (25) asignacion -> . guardar
    (22) log -> . LOG expression
    (2) null -> .
    (10) if_def -> . IF PARIZ expression PARDER LLAVIZ statement LLAVDER
    (26) declarar -> . tipo VALORID
    (28) declarar-asignar -> . tipo VALORID VALORIGUAL expression
    (27) guardar -> . VALORID VALORIGUAL expression
    (18) tipo -> . INT
    (19) tipo -> . FLOAT
    (20) tipo -> . STRING
    (21) tipo -> . BOOL

    WHILE           shift and go to state 10
    DO              shift and go to state 11
    FOR             shift and go to state 12
    LOG             shift and go to state 16
    $end            reduce using rule 2 (null -> .)
    IF              shift and go to state 17
    VALORID         shift and go to state 19
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    STRING          shift and go to state 22
    BOOL            shift and go to state 23

    inicio                         shift and go to state 1
    statement                      shift and go to state 2
    condicional                    shift and go to state 3
    loop_while                     shift and go to state 4
    loop_for                       shift and go to state 5
    asignacion                     shift and go to state 6
    log                            shift and go to state 7
    null                           shift and go to state 8
    if_def                         shift and go to state 9
    declarar-asignar               shift and go to state 13
    guardar                        shift and go to state 14
    declarar                       shift and go to state 15
    tipo                           shift and go to state 18

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> statement .

    $end            reduce using rule 1 (inicio -> statement .)


state 3

    (3) statement -> condicional . statement
    (3) statement -> . condicional statement
    (4) statement -> . loop_while statement
    (5) statement -> . loop_for statement
    (6) statement -> . asignacion FINAL statement
    (7) statement -> . log FINAL statement
    (8) statement -> . null
    (9) condicional -> . if_def elseif_def else_def
    (15) loop_while -> . WHILE PARIZ expression PARDER LLAVIZ statement LLAVDER
    (16) loop_while -> . DO LLAVIZ statement LLAVDER WHILE PARIZ expression PARDER FINAL
    (17) loop_for -> . FOR PARIZ declarar-asignar FINAL expression FINAL guardar PARDER LLAVIZ statement LLAVDER
    (23) asignacion -> . declarar
    (24) asignacion -> . declarar-asignar
    (25) asignacion -> . guardar
    (22) log -> . LOG expression
    (2) null -> .
    (10) if_def -> . IF PARIZ expression PARDER LLAVIZ statement LLAVDER
    (26) declarar -> . tipo VALORID
    (28) declarar-asignar -> . tipo VALORID VALORIGUAL expression
    (27) guardar -> . VALORID VALORIGUAL expression
    (18) tipo -> . INT
    (19) tipo -> . FLOAT
    (20) tipo -> . STRING
    (21) tipo -> . BOOL

    WHILE           shift and go to state 10
    DO              shift and go to state 11
    FOR             shift and go to state 12
    LOG             shift and go to state 16
    $end            reduce using rule 2 (null -> .)
    LLAVDER         reduce using rule 2 (null -> .)
    IF              shift and go to state 17
    VALORID         shift and go to state 19
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    STRING          shift and go to state 22
    BOOL            shift and go to state 23

    condicional                    shift and go to state 3
    statement                      shift and go to state 24
    loop_while                     shift and go to state 4
    loop_for                       shift and go to state 5
    asignacion                     shift and go to state 6
    log                            shift and go to state 7
    null                           shift and go to state 8
    if_def                         shift and go to state 9
    declarar-asignar               shift and go to state 13
    guardar                        shift and go to state 14
    declarar                       shift and go to state 15
    tipo                           shift and go to state 18

state 4

    (4) statement -> loop_while . statement
    (3) statement -> . condicional statement
    (4) statement -> . loop_while statement
    (5) statement -> . loop_for statement
    (6) statement -> . asignacion FINAL statement
    (7) statement -> . log FINAL statement
    (8) statement -> . null
    (9) condicional -> . if_def elseif_def else_def
    (15) loop_while -> . WHILE PARIZ expression PARDER LLAVIZ statement LLAVDER
    (16) loop_while -> . DO LLAVIZ statement LLAVDER WHILE PARIZ expression PARDER FINAL
    (17) loop_for -> . FOR PARIZ declarar-asignar FINAL expression FINAL guardar PARDER LLAVIZ statement LLAVDER
    (23) asignacion -> . declarar
    (24) asignacion -> . declarar-asignar
    (25) asignacion -> . guardar
    (22) log -> . LOG expression
    (2) null -> .
    (10) if_def -> . IF PARIZ expression PARDER LLAVIZ statement LLAVDER
    (26) declarar -> . tipo VALORID
    (28) declarar-asignar -> . tipo VALORID VALORIGUAL expression
    (27) guardar -> . VALORID VALORIGUAL expression
    (18) tipo -> . INT
    (19) tipo -> . FLOAT
    (20) tipo -> . STRING
    (21) tipo -> . BOOL

    WHILE           shift and go to state 10
    DO              shift and go to state 11
    FOR             shift and go to state 12
    LOG             shift and go to state 16
    $end            reduce using rule 2 (null -> .)
    LLAVDER         reduce using rule 2 (null -> .)
    IF              shift and go to state 17
    VALORID         shift and go to state 19
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    STRING          shift and go to state 22
    BOOL            shift and go to state 23

    loop_while                     shift and go to state 4
    statement                      shift and go to state 25
    condicional                    shift and go to state 3
    loop_for                       shift and go to state 5
    asignacion                     shift and go to state 6
    log                            shift and go to state 7
    null                           shift and go to state 8
    if_def                         shift and go to state 9
    declarar-asignar               shift and go to state 13
    guardar                        shift and go to state 14
    declarar                       shift and go to state 15
    tipo                           shift and go to state 18

state 5

    (5) statement -> loop_for . statement
    (3) statement -> . condicional statement
    (4) statement -> . loop_while statement
    (5) statement -> . loop_for statement
    (6) statement -> . asignacion FINAL statement
    (7) statement -> . log FINAL statement
    (8) statement -> . null
    (9) condicional -> . if_def elseif_def else_def
    (15) loop_while -> . WHILE PARIZ expression PARDER LLAVIZ statement LLAVDER
    (16) loop_while -> . DO LLAVIZ statement LLAVDER WHILE PARIZ expression PARDER FINAL
    (17) loop_for -> . FOR PARIZ declarar-asignar FINAL expression FINAL guardar PARDER LLAVIZ statement LLAVDER
    (23) asignacion -> . declarar
    (24) asignacion -> . declarar-asignar
    (25) asignacion -> . guardar
    (22) log -> . LOG expression
    (2) null -> .
    (10) if_def -> . IF PARIZ expression PARDER LLAVIZ statement LLAVDER
    (26) declarar -> . tipo VALORID
    (28) declarar-asignar -> . tipo VALORID VALORIGUAL expression
    (27) guardar -> . VALORID VALORIGUAL expression
    (18) tipo -> . INT
    (19) tipo -> . FLOAT
    (20) tipo -> . STRING
    (21) tipo -> . BOOL

    WHILE           shift and go to state 10
    DO              shift and go to state 11
    FOR             shift and go to state 12
    LOG             shift and go to state 16
    $end            reduce using rule 2 (null -> .)
    LLAVDER         reduce using rule 2 (null -> .)
    IF              shift and go to state 17
    VALORID         shift and go to state 19
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    STRING          shift and go to state 22
    BOOL            shift and go to state 23

    loop_for                       shift and go to state 5
    statement                      shift and go to state 26
    condicional                    shift and go to state 3
    loop_while                     shift and go to state 4
    asignacion                     shift and go to state 6
    log                            shift and go to state 7
    null                           shift and go to state 8
    if_def                         shift and go to state 9
    declarar-asignar               shift and go to state 13
    guardar                        shift and go to state 14
    declarar                       shift and go to state 15
    tipo                           shift and go to state 18

state 6

    (6) statement -> asignacion . FINAL statement

    FINAL           shift and go to state 27


state 7

    (7) statement -> log . FINAL statement

    FINAL           shift and go to state 28


state 8

    (8) statement -> null .

    $end            reduce using rule 8 (statement -> null .)
    LLAVDER         reduce using rule 8 (statement -> null .)


state 9

    (9) condicional -> if_def . elseif_def else_def
    (11) elseif_def -> . ELSEIF PARIZ expression PARDER LLAVIZ statement LLAVDER elseif_def
    (12) elseif_def -> . null
    (2) null -> .

    ELSEIF          shift and go to state 30
    ELSE            reduce using rule 2 (null -> .)
    WHILE           reduce using rule 2 (null -> .)
    DO              reduce using rule 2 (null -> .)
    FOR             reduce using rule 2 (null -> .)
    LOG             reduce using rule 2 (null -> .)
    IF              reduce using rule 2 (null -> .)
    VALORID         reduce using rule 2 (null -> .)
    INT             reduce using rule 2 (null -> .)
    FLOAT           reduce using rule 2 (null -> .)
    STRING          reduce using rule 2 (null -> .)
    BOOL            reduce using rule 2 (null -> .)
    $end            reduce using rule 2 (null -> .)
    LLAVDER         reduce using rule 2 (null -> .)

    elseif_def                     shift and go to state 29
    null                           shift and go to state 31

state 10

    (15) loop_while -> WHILE . PARIZ expression PARDER LLAVIZ statement LLAVDER

    PARIZ           shift and go to state 32


state 11

    (16) loop_while -> DO . LLAVIZ statement LLAVDER WHILE PARIZ expression PARDER FINAL

    LLAVIZ          shift and go to state 33


state 12

    (17) loop_for -> FOR . PARIZ declarar-asignar FINAL expression FINAL guardar PARDER LLAVIZ statement LLAVDER

    PARIZ           shift and go to state 34


state 13

    (24) asignacion -> declarar-asignar .

    FINAL           reduce using rule 24 (asignacion -> declarar-asignar .)


state 14

    (25) asignacion -> guardar .

    FINAL           reduce using rule 25 (asignacion -> guardar .)


state 15

    (23) asignacion -> declarar .

    FINAL           reduce using rule 23 (asignacion -> declarar .)


state 16

    (22) log -> LOG . expression
    (29) expression -> . VALORINT
    (30) expression -> . VALORFLOAT
    (31) expression -> . VALORCADENA
    (32) expression -> . valorbool
    (33) expression -> . PARIZ expression PARDER
    (34) expression -> . VALORID
    (37) expression -> . VALORRESTA expression
    (38) expression -> . expression VALORSUMA expression
    (39) expression -> . expression VALORRESTA expression
    (40) expression -> . expression VALORMULT expression
    (41) expression -> . expression VALORDIV expression
    (42) expression -> . expression VALOREXP expression
    (43) expression -> . expression VALOREQUIV expression
    (44) expression -> . expression VALORNOEQUIV expression
    (45) expression -> . expression VALORMENOR expression
    (46) expression -> . expression VALORMEOI expression
    (47) expression -> . expression VALORMAYOR expression
    (48) expression -> . expression VALORMAOI expression
    (49) expression -> . expression AND expression
    (50) expression -> . expression OR expression
    (35) valorbool -> . TRUE
    (36) valorbool -> . FALSE

    VALORINT        shift and go to state 36
    VALORFLOAT      shift and go to state 37
    VALORCADENA     shift and go to state 38
    PARIZ           shift and go to state 40
    VALORID         shift and go to state 41
    VALORRESTA      shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44

    expression                     shift and go to state 35
    valorbool                      shift and go to state 39

state 17

    (10) if_def -> IF . PARIZ expression PARDER LLAVIZ statement LLAVDER

    PARIZ           shift and go to state 45


state 18

    (26) declarar -> tipo . VALORID
    (28) declarar-asignar -> tipo . VALORID VALORIGUAL expression

    VALORID         shift and go to state 46


state 19

    (27) guardar -> VALORID . VALORIGUAL expression

    VALORIGUAL      shift and go to state 47


state 20

    (18) tipo -> INT .

    VALORID         reduce using rule 18 (tipo -> INT .)


state 21

    (19) tipo -> FLOAT .

    VALORID         reduce using rule 19 (tipo -> FLOAT .)


state 22

    (20) tipo -> STRING .

    VALORID         reduce using rule 20 (tipo -> STRING .)


state 23

    (21) tipo -> BOOL .

    VALORID         reduce using rule 21 (tipo -> BOOL .)


state 24

    (3) statement -> condicional statement .

    $end            reduce using rule 3 (statement -> condicional statement .)
    LLAVDER         reduce using rule 3 (statement -> condicional statement .)


state 25

    (4) statement -> loop_while statement .

    $end            reduce using rule 4 (statement -> loop_while statement .)
    LLAVDER         reduce using rule 4 (statement -> loop_while statement .)


state 26

    (5) statement -> loop_for statement .

    $end            reduce using rule 5 (statement -> loop_for statement .)
    LLAVDER         reduce using rule 5 (statement -> loop_for statement .)


state 27

    (6) statement -> asignacion FINAL . statement
    (3) statement -> . condicional statement
    (4) statement -> . loop_while statement
    (5) statement -> . loop_for statement
    (6) statement -> . asignacion FINAL statement
    (7) statement -> . log FINAL statement
    (8) statement -> . null
    (9) condicional -> . if_def elseif_def else_def
    (15) loop_while -> . WHILE PARIZ expression PARDER LLAVIZ statement LLAVDER
    (16) loop_while -> . DO LLAVIZ statement LLAVDER WHILE PARIZ expression PARDER FINAL
    (17) loop_for -> . FOR PARIZ declarar-asignar FINAL expression FINAL guardar PARDER LLAVIZ statement LLAVDER
    (23) asignacion -> . declarar
    (24) asignacion -> . declarar-asignar
    (25) asignacion -> . guardar
    (22) log -> . LOG expression
    (2) null -> .
    (10) if_def -> . IF PARIZ expression PARDER LLAVIZ statement LLAVDER
    (26) declarar -> . tipo VALORID
    (28) declarar-asignar -> . tipo VALORID VALORIGUAL expression
    (27) guardar -> . VALORID VALORIGUAL expression
    (18) tipo -> . INT
    (19) tipo -> . FLOAT
    (20) tipo -> . STRING
    (21) tipo -> . BOOL

    WHILE           shift and go to state 10
    DO              shift and go to state 11
    FOR             shift and go to state 12
    LOG             shift and go to state 16
    $end            reduce using rule 2 (null -> .)
    LLAVDER         reduce using rule 2 (null -> .)
    IF              shift and go to state 17
    VALORID         shift and go to state 19
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    STRING          shift and go to state 22
    BOOL            shift and go to state 23

    asignacion                     shift and go to state 6
    statement                      shift and go to state 48
    condicional                    shift and go to state 3
    loop_while                     shift and go to state 4
    loop_for                       shift and go to state 5
    log                            shift and go to state 7
    null                           shift and go to state 8
    if_def                         shift and go to state 9
    declarar-asignar               shift and go to state 13
    guardar                        shift and go to state 14
    declarar                       shift and go to state 15
    tipo                           shift and go to state 18

state 28

    (7) statement -> log FINAL . statement
    (3) statement -> . condicional statement
    (4) statement -> . loop_while statement
    (5) statement -> . loop_for statement
    (6) statement -> . asignacion FINAL statement
    (7) statement -> . log FINAL statement
    (8) statement -> . null
    (9) condicional -> . if_def elseif_def else_def
    (15) loop_while -> . WHILE PARIZ expression PARDER LLAVIZ statement LLAVDER
    (16) loop_while -> . DO LLAVIZ statement LLAVDER WHILE PARIZ expression PARDER FINAL
    (17) loop_for -> . FOR PARIZ declarar-asignar FINAL expression FINAL guardar PARDER LLAVIZ statement LLAVDER
    (23) asignacion -> . declarar
    (24) asignacion -> . declarar-asignar
    (25) asignacion -> . guardar
    (22) log -> . LOG expression
    (2) null -> .
    (10) if_def -> . IF PARIZ expression PARDER LLAVIZ statement LLAVDER
    (26) declarar -> . tipo VALORID
    (28) declarar-asignar -> . tipo VALORID VALORIGUAL expression
    (27) guardar -> . VALORID VALORIGUAL expression
    (18) tipo -> . INT
    (19) tipo -> . FLOAT
    (20) tipo -> . STRING
    (21) tipo -> . BOOL

    WHILE           shift and go to state 10
    DO              shift and go to state 11
    FOR             shift and go to state 12
    LOG             shift and go to state 16
    $end            reduce using rule 2 (null -> .)
    LLAVDER         reduce using rule 2 (null -> .)
    IF              shift and go to state 17
    VALORID         shift and go to state 19
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    STRING          shift and go to state 22
    BOOL            shift and go to state 23

    log                            shift and go to state 7
    statement                      shift and go to state 49
    condicional                    shift and go to state 3
    loop_while                     shift and go to state 4
    loop_for                       shift and go to state 5
    asignacion                     shift and go to state 6
    null                           shift and go to state 8
    if_def                         shift and go to state 9
    declarar-asignar               shift and go to state 13
    guardar                        shift and go to state 14
    declarar                       shift and go to state 15
    tipo                           shift and go to state 18

state 29

    (9) condicional -> if_def elseif_def . else_def
    (13) else_def -> . ELSE LLAVIZ statement LLAVDER
    (14) else_def -> . null
    (2) null -> .

    ELSE            shift and go to state 51
    WHILE           reduce using rule 2 (null -> .)
    DO              reduce using rule 2 (null -> .)
    FOR             reduce using rule 2 (null -> .)
    LOG             reduce using rule 2 (null -> .)
    IF              reduce using rule 2 (null -> .)
    VALORID         reduce using rule 2 (null -> .)
    INT             reduce using rule 2 (null -> .)
    FLOAT           reduce using rule 2 (null -> .)
    STRING          reduce using rule 2 (null -> .)
    BOOL            reduce using rule 2 (null -> .)
    $end            reduce using rule 2 (null -> .)
    LLAVDER         reduce using rule 2 (null -> .)

    else_def                       shift and go to state 50
    null                           shift and go to state 52

state 30

    (11) elseif_def -> ELSEIF . PARIZ expression PARDER LLAVIZ statement LLAVDER elseif_def

    PARIZ           shift and go to state 53


state 31

    (12) elseif_def -> null .

    ELSE            reduce using rule 12 (elseif_def -> null .)
    WHILE           reduce using rule 12 (elseif_def -> null .)
    DO              reduce using rule 12 (elseif_def -> null .)
    FOR             reduce using rule 12 (elseif_def -> null .)
    LOG             reduce using rule 12 (elseif_def -> null .)
    IF              reduce using rule 12 (elseif_def -> null .)
    VALORID         reduce using rule 12 (elseif_def -> null .)
    INT             reduce using rule 12 (elseif_def -> null .)
    FLOAT           reduce using rule 12 (elseif_def -> null .)
    STRING          reduce using rule 12 (elseif_def -> null .)
    BOOL            reduce using rule 12 (elseif_def -> null .)
    $end            reduce using rule 12 (elseif_def -> null .)
    LLAVDER         reduce using rule 12 (elseif_def -> null .)


state 32

    (15) loop_while -> WHILE PARIZ . expression PARDER LLAVIZ statement LLAVDER
    (29) expression -> . VALORINT
    (30) expression -> . VALORFLOAT
    (31) expression -> . VALORCADENA
    (32) expression -> . valorbool
    (33) expression -> . PARIZ expression PARDER
    (34) expression -> . VALORID
    (37) expression -> . VALORRESTA expression
    (38) expression -> . expression VALORSUMA expression
    (39) expression -> . expression VALORRESTA expression
    (40) expression -> . expression VALORMULT expression
    (41) expression -> . expression VALORDIV expression
    (42) expression -> . expression VALOREXP expression
    (43) expression -> . expression VALOREQUIV expression
    (44) expression -> . expression VALORNOEQUIV expression
    (45) expression -> . expression VALORMENOR expression
    (46) expression -> . expression VALORMEOI expression
    (47) expression -> . expression VALORMAYOR expression
    (48) expression -> . expression VALORMAOI expression
    (49) expression -> . expression AND expression
    (50) expression -> . expression OR expression
    (35) valorbool -> . TRUE
    (36) valorbool -> . FALSE

    VALORINT        shift and go to state 36
    VALORFLOAT      shift and go to state 37
    VALORCADENA     shift and go to state 38
    PARIZ           shift and go to state 40
    VALORID         shift and go to state 41
    VALORRESTA      shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44

    expression                     shift and go to state 54
    valorbool                      shift and go to state 39

state 33

    (16) loop_while -> DO LLAVIZ . statement LLAVDER WHILE PARIZ expression PARDER FINAL
    (3) statement -> . condicional statement
    (4) statement -> . loop_while statement
    (5) statement -> . loop_for statement
    (6) statement -> . asignacion FINAL statement
    (7) statement -> . log FINAL statement
    (8) statement -> . null
    (9) condicional -> . if_def elseif_def else_def
    (15) loop_while -> . WHILE PARIZ expression PARDER LLAVIZ statement LLAVDER
    (16) loop_while -> . DO LLAVIZ statement LLAVDER WHILE PARIZ expression PARDER FINAL
    (17) loop_for -> . FOR PARIZ declarar-asignar FINAL expression FINAL guardar PARDER LLAVIZ statement LLAVDER
    (23) asignacion -> . declarar
    (24) asignacion -> . declarar-asignar
    (25) asignacion -> . guardar
    (22) log -> . LOG expression
    (2) null -> .
    (10) if_def -> . IF PARIZ expression PARDER LLAVIZ statement LLAVDER
    (26) declarar -> . tipo VALORID
    (28) declarar-asignar -> . tipo VALORID VALORIGUAL expression
    (27) guardar -> . VALORID VALORIGUAL expression
    (18) tipo -> . INT
    (19) tipo -> . FLOAT
    (20) tipo -> . STRING
    (21) tipo -> . BOOL

    WHILE           shift and go to state 10
    DO              shift and go to state 11
    FOR             shift and go to state 12
    LOG             shift and go to state 16
    LLAVDER         reduce using rule 2 (null -> .)
    IF              shift and go to state 17
    VALORID         shift and go to state 19
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    STRING          shift and go to state 22
    BOOL            shift and go to state 23
